--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,6 +27,11 @@
 
     <string name="performance_cpu_title">CPU settings</string>
 
+    <!-- Performance Settings : VM Heap Size -->
+    <string name="ui_heapsize_title">VM Heap Settings</string>
+    <string name="pref_heapsize_title">VM heap size</string>
+    <string name="pref_heapsize_summary">Maximum amount of memory per VM heap (requires reboot)</string>
+
     <!-- Expanded View Power Widget -->
     <string name="title_widget_buttons">Expanded View Widget</string>
     <string name="title_expanded_widget">Notification widgets</string>
