--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,6 +25,12 @@
     <string name="pref_overscroll_weight_title">Overscrolling weight</string>
     <string name="pref_overscroll_weight_summary">Select the weight of the scrollable objects</string>
 
+    <!-- Electron Beam Animation -->
+
+    <string name="pref_electron_beam_title">Screen On/Off Animation</string>
+    <string name="pref_electron_beam_animation_on">Screen-on animation</string>
+    <string name="pref_electron_beam_animation_off">Screen-off animation</string>
+
     <!-- Performace Settings: CPU Settings  -->
     <string name="performance_cpu_title">CPU Settings</string>
     <string name="pref_dialogtitle_cpu_settings">CPU Settings</string>
