Add a note in mod information letting users know they are running nightly builds which may contain bugs. *hopefully* keep away some nightly bug reports. Simply remove this preference when ready to release an update.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -106,6 +106,8 @@
     <string name="changelog_error">Error loading changelog...</string>
     <string name="changelog_unknown">Unknown</string>
     <string name="changelog_version">Version</string>
+    <string name="nightly_title">SalvageMod Nightly</string>
+    <string name="nightly_disclaimer">You are running what is considered to be an unstable nightly build of SalvageMod. There may be bugs! Please dont report bugs for these builds.</string>
 
 	<string name="cpu_settings_title">Performance settings</string>
     <string name="cpu_title">Performance settings</string>
