--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -125,10 +125,27 @@
     <string name="cpu_set_on_boot">Set on boot</string>
     <string name="cpu_set_on_boot_summary">Restore CPU settings on boot</string>
 
-    <!-- Lockscreen Settings -->
+    <!-- Lockscreen -->
     <string name="lockscreen_settings_title_head">Lockscreen</string>
     <string name="lockscreen_settings_title_subhead">Lockscreen settings</string>
+    <string name="lockscreen_settings_summary_head">Lockscreen gestures, style, unlock options</string>
+    <string name="ui_lockscreen_title">Screen lock settings</string>
+    <string name="pref_lockscreen_delay_title">Delay</string>
+    <string name="pref_lockscreen_timeout_lock_delay">Screen timeout delay</string>
+    <string name="pref_lockscreen_screenoff_lock_delay">Screen turned off delay</string>
+    <string name="pref_lockscreen_timeout_lock_delay_summary">How long to delay before enabling screen lock when screen times out</string>
+    <string name="pref_lockscreen_screenoff_lock_delay_summary">How long to delay before enabling screen lock when screen is turned off</string>
+    <string name="pref_lockscreen_stylecfg_title">Style options</string>
+    <string name="pref_lockscreen_stylecfg_summary">Configure the lockscreen style and the corresponding settings</string>
+    <string name="pref_lockscreen_widgets_title">Widget options</string>
+    <string name="pref_lockscreen_widgets_summary">Enable or disable various widgets on the lockscreen</string>
+    <string name="pref_lockscreen_unlock_title">Unlock options</string>
+    <string name="pref_lockscreen_unlock_summary">Controls button unlocking and quick unlock</string>
+    <string name="pref_lockscreen_timeout_title">Delay and timeout</string>
+    <string name="pref_lockscreen_timeout_summary">Configure screen timeout delay and screen turn off delay</string>
     <string name="lockscreen_settings_title">Lockscreen settings</string>
+    <string name="pref_lockscreen_always_battery_title">Always display battery status</string>
+    <string name="pref_lockscreen_always_battery_summary">Display battery status on the lockscreen at all times</string>
     <string name="pref_lockscreen_music_controls_title">Lockscreen music controls</string>
     <string name="pref_lockscreen_music_controls_summary">Displays music controls on the lockscreen</string>
     <string name="pref_lockscreen_now_playing_title">Display song name</string>
@@ -139,5 +156,37 @@
     <string name="pref_lockscreen_music_headset_summary">Display music controls when a wired headset and/or Bluetooth A2DP headset is connected</string>
     <string name="pref_lockscreen_always_music_controls_title">Always display music controls</string>
     <string name="pref_lockscreen_always_music_controls_summary">Display music controls regardless of whether or not music is playing</string>
+    <string name="pref_menu_unlock_title">Menu unlock</string>
+    <string name="pref_menu_unlock_summary">Pressing the menu button unlocks the device</string>
+    <string name="pref_lockscreen_quick_unlock_control_title">Quick Unlock</string>
+    <string name="pref_lockscreen_quick_unlock_control_summary">No need to press OK when entering Pin or Password. Delete counts as bad try</string>
+    <string name="pref_lockscreen_custom_app_toggle_title">Custom app starter</string>
+    <string name="pref_lockscreen_custom_app_toggle_summary">Shows a second slider on sliding style, shows a custom app dimple on rotary style</string>
+    <string name="pref_lockscreen_custom_app_activity_title">Custom application</string>
+    <string name="pref_lockscreen_custom_icon_style_title">Message icon for custom app</string>
+    <string name="pref_lockscreen_custom_icon_style_summary">Uses message icon instead of cm icon for custom app starter</string>
+    <string name="pref_lockscreen_rotary_unlock_down_title">Drag down to unlock</string>
+    <string name="pref_lockscreen_rotary_unlock_down_summary">Dragging down rotary wheel unlocks. Dragging right starts custom app</string>
+    <string name="pref_lockscreen_rotary_hide_arrows_title">Hide rotary arrows</string>
+    <string name="pref_lockscreen_rotary_hide_arrows_summary">Hides the directional hint arrows on rotary style</string>
+    <string name="lockscreen_style_header">Style preferences</string>
+    <string name="lockscreen_delay_header">Delay and timeout</string>
+    <string name="pref_lockscreen_style_title">Lockscreen style</string>
+    <string name="pref_lockscreen_style_summary">Choose the style of the lockscreen</string>
+    <string name="pref_volbtn_music_controls_title">Volume button music controls</string>
+    <string name="pref_volbtn_music_controls_summary">Seek music tracks when long-pressing the volume buttons while screen off</string>
+    <string name="pref_cambtn_music_controls_title">Camera button music control</string>
+    <string name="pref_cambtn_music_controls_summary">Toggle play/pause when long-pressing the camera button while screen off</string>
+    <string name="lockscreen_widgets_note_title">Note</string>
+    <string name="lockscreen_widgets_note_summary">Choosing minimalistic lense style hides all widgets except music control. Yet below options are not unset to allow easy switching to other styles</string>
+    <string name="pref_lockscreen_disable_unlock_tab">Disable unlock slider</string>
+    <string name="pref_lockscreen_disable_unlock_tab_summary">Note: You need to enable trackball, menu key, or gesture unlocking before this option becomes available</string>
+    <string name="pref_trackball_wake_title">Trackball wake</string>
+    <string name="pref_trackball_wake_summary">Pressing the trackball wakes the device</string>
+    <string name="pref_trackball_unlock_title">Trackball unlock</string>
+    <string name="pref_trackball_unlock_summary">Pressing the trackball unlocks the device</string>
+
+    <string name="select_custom_app_title">Select custom application</string>
+    <string name="group_applications">Applications</string>
 
 </resources>
