--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -174,4 +174,7 @@
     <string name="select_custom_app_title">Select custom application</string>
     <string name="group_applications">Applications</string>
 
+    <string name="app_default_settings_title">Default application settings</string>
+    <string name="parts_category">Extended parts</string>
+
 </resources>
