Minor string fixes. =P

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -185,7 +185,7 @@
     <string name="dev_lithid">Lithid</string>
     <string name="dev_barnacles_summary">Founder, developer</string>
     <string name="dev_echoside_summary">Founder, developer</string>
-    <string name="dev_lithid_summary">Developer</string>
+    <string name="dev_lithid_summary">Developer, beast</string>
     <string name="the_team_summary">Meet the development team</string>
     <string name="supersonic_category">Supersonic maintainers</string>
 
